# sms_transaction_tracker

./: .gitignore  README.md  create_logo.py  push_logo.py  push_pyproject.py  push_to_github.py  pyproject.toml  vercel.json
app/: build_output.txt  gradle.properties  local.properties  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/example/smstransactiontracker/ui/main/: MainScreenTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/smstransactiontracker/: MainActivity.kt  Navigation.kt  NavigationKeys.kt  SMSReceiver.kt  TransactionHistory.kt  TransactionParser.kt
app/app/src/main/java/com/example/smstransactiontracker/data/: DataRepository.kt
app/app/src/main/java/com/example/smstransactiontracker/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/java/com/example/smstransactiontracker/ui/main/: MainScreen.kt  MainScreenViewModel.kt
app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/example/smstransactiontracker/: TransactionParserTest.kt
app/app/src/test/java/com/example/smstransactiontracker/ui/main/: MainScreenViewModelTest.kt
server/: database.py  login.py  main.py  requirements.txt  run_server.ps1  setup_schema.py  sms_parser.py  supabase_schema.sql  test_api.py
server/static/: app.js  index.html  new_features.js  new_styles.css  style.css
